Obs:Initial: Fix list item spacing

--- a/obsidian/src/initial.css
+++ b/obsidian/src/initial.css
@@ -1,9 +1,9 @@
 :root {
-  --fancy-sans: 'Questrial', 'Century Gothic', sans-serif;
-  --pragmatic-sans: 'Helvetica Neue', 'Nimbus Sans L', 'Arial', sans-serif;
-  --fancy-serif: 'Lustria', 'Georgia', serif;
-  --pragmatic-serif: 'Noto Serif', 'Times New Roman', serif;
-  --mono-font: 'JetBrains Mono', 'Courier New', Consolas, monospace;
+  --fancy-sans: "Questrial", "Century Gothic", sans-serif;
+  --pragmatic-sans: "Helvetica Neue", "Nimbus Sans L", "Arial", sans-serif;
+  --fancy-serif: "Lustria", "Georgia", serif;
+  --pragmatic-serif: "Noto Serif", "Times New Roman", serif;
+  --mono-font: "JetBrains Mono", "Courier New", Consolas, monospace;
 
   --header-font: var(--fancy-sans);
   --body-font: var(--fancy-serif);
@@ -135,6 +135,12 @@ img {
   & .cm-s-obsidian span.cm-footref {
     text-indent: 0;
   }
+
+  & pre.CodeMirror-line.HyperMD-list-line,
+  & pre.CodeMirror-line-like.HyperMD-list-line {
+    padding-top: 0.4em;
+    padding-bottom: 0.4em;
+  }
 }
 
 .markdown-preview-view {
@@ -192,9 +198,14 @@ img {
       border-radius: 5px;
     } */
 
-    & > ol > li {
-      padding-top: 0.25em;
-      padding-bottom: 0.25em;
+    & > ol li,
+    & > ul li {
+      padding-top: 0.4em;
+      padding-bottom: 0.4em;
+
+      & p {
+        margin: 0;
+      }
     }
 
     & .tag {
